; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/tificc/extr_tificc.c_ComputeOutputFormatDescriptor.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/utils/tificc/extr_tificc.c_ComputeOutputFormatDescriptor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @ComputeOutputFormatDescriptor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ComputeOutputFormatDescriptor(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @T_PLANAR(i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @ChanCountFromPixelType(i32 %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %3
  %17 = load i32, i32* %6, align 4
  %18 = icmp eq i32 %17, 4
  br label %19

19:                                               ; preds = %16, %3
  %20 = phi i1 [ true, %3 ], [ %18, %16 ]
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %9, align 4
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @FLOAT_SH(i32 %22)
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @COLORSPACE_SH(i32 %24)
  %26 = or i32 %23, %25
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @PLANAR_SH(i32 %27)
  %29 = or i32 %26, %28
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @CHANNELS_SH(i32 %30)
  %32 = or i32 %29, %31
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @BYTES_SH(i32 %33)
  %35 = or i32 %32, %34
  ret i32 %35
}

declare dso_local i32 @T_PLANAR(i32) #1

declare dso_local i32 @ChanCountFromPixelType(i32) #1

declare dso_local i32 @FLOAT_SH(i32) #1

declare dso_local i32 @COLORSPACE_SH(i32) #1

declare dso_local i32 @PLANAR_SH(i32) #1

declare dso_local i32 @CHANNELS_SH(i32) #1

declare dso_local i32 @BYTES_SH(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
